fix(style): hdie overflowed alt text of event member avatars

--- a/style.css
+++ b/style.css
@@ -246,6 +246,8 @@ hr {
 
 .avatar {
 	border-radius: 50%;
+	overflow: hidden;
+	white-space: normal;
 }
 
 @media (prefers-contrast: more) {
